[package]

name = "bit_crusher"
version = "0.1.0"
authors = ["josh"]
description = "Rusty Jen Down Sampling DSP"
keywords = ["dsp", "bitcrush", "downsample", "audio", "effect"]
license = "MIT"
repository = "https://github.com/JoshuaBatty/bit_crusher.git"
homepage = "https://github.com/JoshuaBatty/bit_crusher"

[dependencies]
dsp-chain = "*"
